src/App.css
#root {
 display: flex;
 flex-direction: column;
 min-height: 100vh;
 align-items: center;
  padding: 2.5em 1em;
  /* Padding is added here so the title is being pushed down more and the bottom card is not sticking to the bottom */
}

.header {
  margin-bottom: 2.5em;
  text-align: center;
}

.logo{
  display: flex;
  align-items: center;
  justify-content: center;
  gap: .5em;
  margin-bottom: .75em;
}

.big-icon-style {
  color: var(--primary-color);
  width: 32px;
  height: 32px;
}

.logo-name {
  font-size: 1.875rem;
  line-height: 2.25rem;
  /* These styles are for mobile. Later when adding media query for desktop the code will be this
    font-size: 2.25rem;
    line-height: 2.5rem;
  */
  color: var(--heading-color);
  font-weight: 700;
  
}

.border {
  border: 1px solid #e5e7eb;
}

/* Might add separate classes for the border above daily calorie goal and the one above log food. The one above daily calorie goal will be used 
for space if I decide to put the progress bar from the original design. The other border will be used to create space if needed */

.title-subheading {
  color: var(--secondary-color);
}

.cards-container {
  max-width: 576px;
  width: 100%;
}

.card-one {
  background-color: #FFFFFF;
  margin-bottom: 1.5em;
  border-radius: 12px;
  border: 1px solid #e5e7eb;
}

.card-two {
  background-color: #FFFFFF;
  border-radius: 12px;
  border: 1px solid #e5e7eb;
}

.calorie-display {
  display: flex;
  justify-content: space-around;
  /* Going to use flexbox here for now but could also use grid here too, to get the calorie display side by side like the design */
  /* display: grid;
  grid-template-columns: repeat(3, minmax(0,1fr)); */
  /* I think I figured out how get it to stick to top. I have to put padding on the individual divs of the calorie display and not put padding on the
  card itself. When I put padding on the card itself, it's causing the calorie display div to push down. For now going to do this but see if I can find a better solution */
  /* Could trying using display grid like the code above and keep padding the same in each individual div. That might fix spacing not looking exact
  to design */
}

.goal-calories, .consumed-calories,.remaining {
  text-align: center;
  padding: 1.25em 1em;
}

.divide-border {
  border-left: 1px solid #e5e7eb;
  border-right: 1px solid #e5e7eb;
  /* Came up with a quick solution to apply divide border for now. Just applied border to the left and right of consumed calories div in jsx */
}

.display-style {
  text-transform: uppercase;
  letter-spacing: .05rem;
  font-weight: 500;
  font-size: .75rem;
  line-height: 1rem;
  color: var(--secondary-color);
  margin-bottom: .25em;
}

.cal-number-style {
  font-size: 1.875rem;
  line-height: 2.25rem;
  font-family: var(--primary-font);
}

.cal-style{
  font-size: .75rem;
  line-height: 1rem;
  color: var(--secondary-color);
}

.daily-calorie-goal {
  padding: 1em 1.5em;
}

.icon-flex {
  display: flex;
  align-items: center;
  gap: .5em;
  margin-bottom: .75em;
}

.small-icon-style {
  width: 16px;
  height: 16px;
  color: var(--primary-color);
}

.subheading{
  font-weight: 600;
  font-size: .875rem;
  line-height: 1.25rem;
}

.goal-form {
  display: flex;
  gap: .75em;
}

.goal-input-style {
  font-size: .875rem;
  line-height: 1.25rem;
  background-color: #F6F9F7;
  padding: .5em .75em;
  border: 1px solid #e5e7eb;
  border-radius: 10px;
  width: 100%;
  height: 40px;
  flex: 1;
}

.update-goal {
  font-size: .875rem;
  line-height: 1.25rem;
  color: #FFFFFF;
  padding: .5em 1em;
  background-color: var(--primary-color);
  border-radius: 10px;
  height: 40px;
  border: none;
  font-family: inherit;
}

.update-goal:hover {
  cursor: pointer;
}

/* I think this piece of code will make it so when clicking inside input, the border will be green
  .goal-input-style:focus-visible {
  border-color: 1px solid var(--primary-color);
} */

.todays-log {
  padding: 1.5em;
}

/* Fixed .icon-flex h3 so now this should work if I decided to make this title bigger */
/* .todays-log-title {
  font-size: 1rem;
} */

/* In the design across from the today's log their is supposed to be a count that lists how many items their are in the list. 
For example 2 items would be shown across from it. 
Not going to add that for yet. Going to keep it simple for now */

.default-message {
  text-align: center;
  font-size: .875rem;
  line-height: 1.25rem;
  color: var(--secondary-color);
  padding-top: 1.5em;
  padding-bottom: 1.5em;
}

.list-container {
  margin: 0;
  padding: 0;
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: .5em;
}

.list-item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: .75em 1em;
  background-color: #eaf0ed80;
  border: 1px solid #e5e7eb;
  border-radius: 10px;
}

.food-name {
  color: var(--heading-color);
  font-weight: 500;
  font-size: .875rem;
  line-height: 1.25rem;
}

.food-cal {
  color: var(--secondary-color);
  font-family: var(--primary-font);
  font-size: .75rem;
  line-height: 1rem;
}

.delete-btn {
  background: none;
  border: none;
  color: var(--secondary-color);
  cursor: pointer;
}

.trash-icon-size {
  width: 1rem;
  height: 1rem;
}

.log-food {
  padding: 1em 1.5em;
}

.log-food-form {
  display: flex;
  flex-direction: column;
  gap: .75em;
}

.food-name-input {
  padding: .6em .9em;
  background-color: #F6F9F7;
  border: 1px solid #e5e7eb;
  border-radius: 10px;
  flex: 1;
  width: 100%;
  height: 40px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.food-cal-input {
  padding: .6em .9em;
  background-color: #F6F9F7;
  border: 1px solid #e5e7eb;
  border-radius: 10px;
  width: 100%;
  height: 40px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.add-food {
  display: inline-flex;
  align-items: center;
  gap: .5em;
  padding: .6em .9em;
  font-size: .875rem;
  line-height: 1.25rem;
  color: #FFFFFF;
  background-color: var(--primary-color);
  border-radius: 10px;
  border: none;
  font-family: inherit;
  height: 40px;
}

.add-food:hover {
  cursor: pointer;
}

.plus-icon {
  width: 16px;
  height: 16px;
}

@media(min-width: 600px) {

  .logo-name {
    font-size: 2.25rem;
    line-height: 2.5rem;
  }

  .log-food-form {
    flex-direction: row;
  }

  .food-name-input {
    font-size: .875rem;
    line-height: 1.25rem;
  }
  .food-cal-input {
    font-size: .875rem;
    line-height: 1.25rem;
    width: 7em;
  }
  
}

/* Remember to style the hover elememnts later on */

